--- a/app/src/main/res/layout/activity_cook.xml
+++ b/app/src/main/res/layout/activity_cook.xml
@@ -1,6 +1,142 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-</LinearLayout>
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Type in your ingredients"
+        android:textColor="#1E90FF"
+        android:textStyle="bold"
+        android:textSize="30sp"
+        android:textAlignment="center"
+        android:layout_marginTop="15dp" />
+
+    <EditText
+        android:id="@+id/ingr1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textView"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:hint="ingredient 1"/>
+
+    <EditText
+        android:id="@+id/ingr2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/ingr1"
+        android:layout_centerHorizontal="true"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:hint="ingredient 2"/>
+
+    <EditText
+        android:id="@+id/ingr3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/ingr2"
+        android:layout_centerHorizontal="true"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:hint="ingredient 3"/>
+
+    <EditText
+        android:id="@+id/ingr4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/ingr3"
+        android:layout_centerHorizontal="true"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:hint="ingredient 4"/>
+    <EditText
+        android:id="@+id/ingr5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/ingr4"
+        android:layout_centerHorizontal="true"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:hint="ingredient 5"/>
+
+    <TextView
+        android:id="@+id/time"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/ingr5"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="15dp"
+        android:text="Consumed Time"
+        android:textSize="20sp"
+        android:textColor="#1E90FF"
+        android:textStyle="bold"/>
+
+    <SeekBar
+        android:id="@+id/seekBar"
+        style="@style/Widget.AppCompat.SeekBar.Discrete"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/ingr5"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="60dp"
+        android:max="30"
+        android:progress="5" />
+
+    <TextView
+        android:id="@+id/level"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Select Level"
+        android:textSize="20sp"
+        android:textColor="#1E90FF"
+        android:textStyle="bold"
+        android:layout_alignLeft="@+id/time"
+        android:layout_alignStart="@+id/time"
+        android:layout_below="@+id/time"
+        android:layout_marginTop="45dp"
+        />
+
+    <Button
+        android:id="@+id/easy"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="EASY"
+        android:layout_toLeftOf="@+id/medium"
+        android:layout_below="@+id/seekBar"
+        android:layout_marginTop="50dp" />
+
+    <Button
+        android:id="@+id/medium"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="MEDIUM"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/seekBar"
+        android:layout_marginTop="50dp"
+        android:layout_marginLeft="20dp" />
+
+    <Button
+        android:id="@+id/hard"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="HARD"
+        android:layout_toRightOf="@+id/medium"
+        android:layout_below="@+id/seekBar"
+        android:layout_marginTop="50dp"
+        android:layout_marginLeft="20dp" />
+
+    <Button
+        android:id="@+id/search"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/ingr5"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="190dp"
+        android:text="SEARCH" />
+
+</RelativeLayout>
