--- a/app/src/main/res/layout/fragment_book.xml
+++ b/app/src/main/res/layout/fragment_book.xml
@@ -49,7 +49,7 @@
         android:id="@+id/asian"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/noodle"
+        app:srcCompat="@drawable/pizza"
         android:padding="0sp"
         android:scaleType="fitXY"
         android:adjustViewBounds="true"
@@ -67,9 +67,9 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/asian"
         android:layout_alignLeft="@+id/asian"
-        android:layout_marginLeft="25dp"
+        android:layout_marginLeft="20dp"
         android:layout_marginTop="7dp"
-        android:text="Asian"
+        android:text="Western"
         android:textSize="20sp"
         android:textColor="#1E90FF"
         android:textStyle="bold"
@@ -79,7 +79,7 @@
         android:id="@+id/western"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/hamburger"
+        app:srcCompat="@drawable/fishes"
         android:padding="0sp"
         android:scaleType="fitXY"
         android:adjustViewBounds="true"
@@ -98,7 +98,7 @@
         android:layout_alignLeft="@+id/western"
         android:layout_marginLeft="15dp"
         android:layout_marginTop="7dp"
-        android:text="Western"
+        android:text="Asian"
         android:textSize="20sp"
         android:textColor="#1E90FF"
         android:textStyle="bold"
